--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -8,9 +8,9 @@
 		"select-doctor": "Choose a good doctor",
 		"fee": "Checkup package",
 		"health-check": "General health check",
-		"support": "Support"
+		"support": "Support",
+		"welcome": "Welcome"
 	},
-
 	"banner": {
 		"title": "MEDICAL FOUNDATION",
 		"subtitle": "COMPREHENSIVE HEALTH CARE",
@@ -48,17 +48,18 @@
 		"userpass-wrong": "Invalid username or password!"
 	},
 	"menu": {
-		"system": {
-			"header": "System",
-			"system-administrator": {
-				"header": "System Administrator",
-				"user-manage": "User manage",
-				"user-redux": "Manage user using redux",
-				"register-package-group-or-account": "Register service package for group/account"
-			},
-			"system-parameter": {
-				"header": "System-parameter"
-			}
+		"admin": {
+			"manage-user": "User",
+			"manage-doctor": "Doctor management",
+			"manage-admin": "Admin management",
+			"crud": "CRUD user",
+			"crud-redux": "CRUD redux",
+			"clinic": "Clinic",
+			"manage-clinic": "Clinic management",
+			"specialty": "Specialty",
+			"manage-specialty": "Specialty management",
+			"handbook": "Handbook",
+			"manage-handbook": "Handbook management"
 		}
 	},
 	"system": {
