#61 Hoàn Tất CRUD Users Với React - Auto Fill Thông Tin EDIT

--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -74,6 +74,7 @@
 		"position": "Position",
 		"role": "Role",
 		"image": "Avatar",
-		"save": "Save"
+		"save": "Save",
+		"edit": "Save changes"
 	}
 }
