#64 Tạo Data Hoàn Tất Section Bác Sĩ Nổi Bật Trong Tuần

--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -76,5 +76,9 @@
 		"image": "Avatar",
 		"save": "Save",
 		"edit": "Save changes"
+	},
+	"homepage": {
+		"outstanding-doctor": "Featured Doctor of the Week",
+		"more-infor": "See more"
 	}
 }
