#71 Tạo Menu Phân Quyền Người Dùng Khi Đăng Nhập

--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -60,6 +60,9 @@
 			"manage-specialty": "Specialty management",
 			"handbook": "Handbook",
 			"manage-handbook": "Handbook management"
+		},
+		"doctor": {
+			"manage-schedule": "Manage medical appointments"
 		}
 	},
 	"manage-user": {
