--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -57,5 +57,11 @@
 	"homepage": {
 		"outstanding-doctor": "Bác sĩ nổi bật tuần qua",
 		"more-infor": "Xem thêm"
+	},
+	"manage-schedule": {
+		"title": "Quản lý lịch khám bệnh",
+		"choose-doctor": "Chọn bác sĩ",
+		"select-date": "Chọn ngày",
+		"btn-save": "Lưu thông tin"
 	}
 }
