--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -97,5 +97,18 @@
 			"choose": "Choose",
 			"book-free": "and book (free)"
 		}
+	},
+
+	"admin": {
+		"manage-doctor": {
+			"title": "Update doctor information",
+			"select-doctor": "Choose doctor",
+			"introduction": "Introduction",
+			"update-information": "Update information",
+			"save-information": "Save information",
+			"select-price": "Choose price",
+			"select-payment-method": "Choose payment method",
+			"select-province": "Choose province"
+		}
 	}
 }
