--- a/Reactjs/src/translations/en.json
+++ b/Reactjs/src/translations/en.json
@@ -96,6 +96,13 @@
 			"no-schedule": "No appointments available at this time, please choose another time!",
 			"choose": "Choose",
 			"book-free": "and book (free)"
+		},
+		"extra-infor-doctor": {
+			"text-address": "Clinic address",
+			"price": "Price:",
+			"view-detail": "View detail",
+			"hide-detail": "Hide detail",
+			"payment-method-des": "Can be paid by: "
 		}
 	},
 
