--- a/Reactjs/src/translations/vi.json
+++ b/Reactjs/src/translations/vi.json
@@ -70,6 +70,13 @@
 			"no-schedule": "Không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác!",
 			"choose": "Chọn",
 			"book-free": "và đặt (miễn phí)"
+		},
+		"extra-infor-doctor": {
+			"text-address": "Địa chỉ khám",
+			"price": "Giá khám:",
+			"view-detail": "Xem chi tiết",
+			"hide-detail": "Ẩn bảng giá",
+			"payment-method-des": "Có thể thanh toán bằng hình thức: "
 		}
 	},
 	"admin": {
